2007-11-23  Andreas Schmitz <schmitz@lat-lon.de>
        (almost all files):
        Cleaned up the code, made it type safe etc., renamed classes etc.

2007-11-23  Andreas Schmitz <schmitz@lat-lon.de>
        src/de/latlon/deejump/plugin/wfs/transaction/UpdateWFSLayerPlugIn.java:
        Better error handling for transactions.

2007-11-20  Andreas Schmitz <schmitz@lat-lon.de>
        src/de/latlon/deejump/plugin/wfs/transaction/TransactionFactory.java:
        Fixed Date valued filters.

2007-11-16  Andreas Schmitz <schmitz@lat-lon.de>
        src/de/latlon/deejump/plugin/wfs/transaction/TransactionFactory.java:
		Fixed typo when building XML by hand.

2007-11-15  Andreas Schmitz <schmitz@lat-lon.de>
        src/de/latlon/deejump/plugin/wfs/transaction*:
        Restructured the package a little bit.

2007-11-14  Andreas Schmitz <schmitz@lat-lon.de>
        src/de/latlon/deejump/plugin/wfs/TransactionFactory.java:
        Fixed null pointer when inserting null Dates.

2007-11-08  Andreas Schmitz <schmitz@lat-lon.de>
        src/de/latlon/deejump/util/data/JUMPFeatureFactory.java,
        src/de/latlon/deejump/plugin/wfs/TransactionFactory.java,
        src/de/latlon/deejump/plugin/wfs/WFSPlugIn.java,
        src/de/latlon/deejump/plugin/wfs/UpdateWFSLayerPlugIn.java:
        Improved the API to be more usable outside of the plugin.

2007-10-30  Andreas Schmitz <schmitz@lat-lon.de>
        src/de/latlon/deejump/util/data/JUMPFeatureFactory.java:
        Fixed bug when setting default geometry.

2007-10-30  Andreas Schmitz <schmitz@lat-lon.de>
        src/de/latlon/deejump/ui/DeeJUMPException.java,
        src/de/latlon/deejump/util/data/JUMPFeatureFactory.java:
        Improved Exception handling.

2007-10-26  Andreas Schmitz <schmitz@lat-lon.de>
        src/de/latlon/deejump/plugin/wfs/WFSPlugIn.java,
        src/de/latlon/deejump/plugin/wfs/AbstractWFSWrapper.java:
        Fixed feature type extraction.

2007-10-26  Andreas Schmitz <schmitz@lat-lon.de>